-*- coding: iso-8859-1 -*-
Mailman - The GNU Mailing List Management System
Copyright (C) 1998-2011 by the Free Software Foundation, Inc.
51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA

Here is a history of user visible changes to Mailman.

2.1.16 (xx-xxx-xxxx)

  New Features

    - There is a new mm_cfg.py setting SUBSCRIBE_FORM_SECRET which will put
      a dynamically generated, hidden hash in the listinfo subscribe form and
      check it upon submission.  Setting this will prevent automated processes
      (bots) from successfully POSTing web subscribes without first retrieving
      and parsing the form from the listinfo page.  The form must also be
      submitted no later than FORM_LIFETIME nor no earlier than
      SUBSCRIBE_FORM_MIN_TIME after retrieval.  Note that enabling this will
      break any static subscribe forms on your site.  See the description in
      Defaults.py for more info.  (LP: 1082746)

    - add_members now has an option to add members with mail delivery disabled
      by admin.  (LP: 1070574)

    - IncomingRunner now logs rejected messages to the vette log.
      (LP: 1068837)

    - The name of the mailmanctl master lock file is now congigurable via the
      mm_cfg.py setting MASTER_LOCK_FILE.  (LP: 1082308)

    - list_lists now has an option to list only lists with public archives.
      (LP: 1082711)

  Contributed programs

    - A new "sitemap" bash script has been contributed by Tomasz Chmielewski
      <mangoo@wpkg.org> to generate a sitemap.xml file of an installation's
      public archives for submission to search engines.

  i18n

    - pt_BR message catalog has two new and an updated message per Hugo Koji
      Kobayashi.  (LP: 1138578)

    - German message catalog has been updated per Ralf Hildebrandt.

    - Corrected typo in templates/it/private.html.

  Bug Fixes and other patches

    - Changed configure's method for getting Python's include directory from